<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home"/>

        <item
            android:id="@+id/nav_blacklist"
            android:icon="@drawable/ic_block"
            android:title="@string/nav_blacklist"/>

        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_stats"
            android:title="@string/nav_statistics"/>

        <item
            android:id="@+id/nav_audit"
            android:icon="@drawable/ic_log"
            android:title="@string/nav_audit"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings"/>

        <item
            android:id="@+id/nav_training"
            android:icon="@drawable/ic_learning"
            android:title="@string/nav_training"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_about"/>

    </group>

</menu>